[tool.poetry]
name = "minesweeper-server"
version = "0.1.0"
description = ""
authors = ["Breki <breki@directivegames.com>"]
readme = "README.md"
packages = [{include = "minesweeper_server"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
